--- a/vim/plugins/dein-lazy.toml
+++ b/vim/plugins/dein-lazy.toml
@@ -36,6 +36,9 @@ hook_source = '''
 [[plugins]]
 repo = 'stevearc/oil.nvim'
 on_cmd = 'Oil'
+hook_add = '''
+  nnoremap <Leader>o <Cmd>Oil<CR>
+'''
 lua_source = '''
     require('oil').setup {
         delete_to_trash = true,
@@ -179,14 +182,14 @@ lua_source = '''
 repo = 'monaqa/dial.nvim'
 on_map = { nv = ['<Plug>', 'g<Plug>'] }
 hook_add = '''
-  nnoremap <C-a> <Plug>(dial-increment)
-  nnoremap <C-x> <Plug>(dial-decrement)
-  vnoremap <C-a> <Plug>(dial-increment)
-  vnoremap <C-x> <Plug>(dial-decrement)
-  nmap g<C-a> g<Plug>(dial-increment)
-  nmap g<C-x> g<Plug>(dial-decrement)
-  vmap g<C-a> g<Plug>(dial-increment)
-  vmap g<C-x> g<Plug>(dial-decrement)
+  nnoremap  <C-a> <Plug>(dial-increment)
+  nnoremap  <C-x> <Plug>(dial-decrement)
+  nnoremap g<C-a> <Plug>(dial-g-increment)
+  nnoremap g<C-x> <Plug>(dial-g-decrement)
+  xnoremap  <C-a> <Plug>(dial-increment)
+  xnoremap  <C-x> <Plug>(dial-decrement)
+  xnoremap g<C-a> <Plug>(dial-g-increment)
+  xnoremap g<C-x> <Plug>(dial-g-decrement)
 '''
 lua_source = '''
     local augend = require("dial.augend")
