--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -50,9 +50,9 @@ jobs:
             echo ''
             echo '```diff'
           } >> ./ci-logs/update.md
-          nix build --no-link nixpkgs#colorized-logs
-          ansi2txt() { nix shell nixpkgs#colorized-logs -c ansi2txt; }
-          nix run nixpkgs#pinact -- run -u --fix --diff |& tee >(ansi2txt >> ./ci-logs/update.md)
+          nix build --no-link nixpkgs#pinact && pinact() { nix run nixpkgs#pinact -- "$@"; }
+          nix build --no-link nixpkgs#colorized-logs && ansi2txt() { nix shell nixpkgs#colorized-logs -c ansi2txt; }
+          pinact run -u --fix --diff |& tee >(ansi2txt >> ./ci-logs/update.md)
           echo '```' >> ./ci-logs/update.md
 
       - name: Set PR body output
