setup aerospace and sketchybar

--- a/config-files/alacritty.toml
+++ b/config-files/alacritty.toml
@@ -4,7 +4,8 @@ TERM = "xterm-256color"
 [window]
 decorations = "none"
 opacity = 1.0
-startup_mode = "Fullscreen"
+# startup_mode = "Fullscreen"
+startup_mode = "Windowed"
 
 [scrolling]
 history = 10000
